# stbass

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: STBASS_REFERENCE.md
src/stbass/: __init__.py  alt.py  channel.py  failure.py  mcp.py  observe.py  par.py  placement.py  process.py  replicator.py  result.py  seq.py  timer.py  topology.py
tests/: conftest.py  test_alt.py  test_channel.py  test_end_to_end.py  test_failure.py  test_integration.py  test_mcp.py  test_par.py  test_placement.py  test_process.py  test_replicator.py  test_result.py  test_scaffolding.py  test_seq.py  test_timer.py  test_topology.py
