[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stbass"
version = "0.1.0"
description = "Formal concurrency primitives for the agentic era. Too many bass players? Now they're in tune."
authors = [{ name = "Beautiful Majestic Dolphin LLC" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "rich>=13.0",
]
observe = [
    "opentelemetry-api>=1.0",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
